--- a/earthgarden/build.gradle
+++ b/earthgarden/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 
+	implementation'com.google.code.gson:gson:2.8.7'
+
 	runtimeOnly 'mysql:mysql-connector-java'
 	
 	compileOnly 'org.projectlombok:lombok'
